# adguard280

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile
adguard280/: main.py
tests/: test_adguard280.py
