[tool.poetry]
name = "adguard280"
version = "0.1.0"
description = ""
authors = ["Yuuki Sakakibara <you@nanda.ro>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
